# pyadms

./: .gitignore  .travis.yml  AUTHORS.md  CHANGES.md  CMakeLists.txt  INSTALL  NOTICE  README.md  appveyor.yml  setup.cfg  setup.py
admsJSON/: CMakeLists.txt  adms.cc  adms.h  admsJSON.cc  admsPreprocessor.h  admsVeriloga.h  adms_admsmain.cc  adms_admsmain.h  adms_analog.cc  adms_analog.h  adms_analogfunction.cc  adms_analogfunction.h  adms_attribute.cc  adms_attribute.h  adms_block.cc  adms_block.h  adms_branch.cc  adms_branch.h  adms_discipline.cc  adms_discipline.h  adms_instance.cc  adms_instance.h  adms_lexval.cc  adms_lexval.h  adms_math.cc  adms_math.h  adms_message.cc  adms_message.h  adms_module.cc  adms_module.h  adms_nature.cc  adms_nature.h  adms_node.cc  adms_node.h  adms_range.cc  adms_range.h  adms_simulator.cc  adms_simulator.h  adms_slist.cc  adms_slist.h  (+13 more)
archive/osdi/: README  diode.c  diode.json  diode.va  ekv.json  ideas.txt  nstart.py  osdi.h
archive/xmlversion/: CMakeLists.txt
archive/xmlversion/admsXml/: CMakeLists.txt  mkelements.pl  preprocessorLex.l  verilogaYacc.y  verilogaYacc.y.in
docs/: VAMS-LRM-2-4.txt
include/: disciplines.vams
lib/: setup.cfg  setup.py
lib/pyadms/: admsJSON.py  adms_expression.py  adms_loader.py  adms_printer.py  adms_visitor.py  nstart.py  visitor.py
ngspice/: CMakeLists.txt
ngspice/admst/: CMakeLists.txt
ngspice/ekv/: ekv.va  ekv.va.result.json
ngspice/hicum0/: CMakeLists.txt  hicum0.va  hicum0.va.result.json
ngspice/hicum2/: CMakeLists.txt  hicum2.va.result.json
ngspice/include/: disciplines.vams
ngspice/mextram/: bjt504t.va.result.json
ngspice/psp102/: CMakeLists.txt  psp102.va
ngspice/pyadms/: adms_implicit.py  nstart.py  pyadms.py
osdi/: diode.c  diode.json  diode.va  osdi.h
osdi/docs/: osdi_v0p3.txt
pyadms/: NOTICE  __init__.py  adms_implicit.py  adms_loader.py  nstart.py  visitor.py
scripts/: build_docker_manylinux2014.sh  build_macos.sh  build_manylinux2014.sh  build_vs.bat  build_wheel.sh  test_import.py
test/: CMakeLists.txt
test/ekv/: ekv.va.result.json
test/hicum0/: hicum0.va.result.json
test/hicum2/: hicum2.va  hicum2.va.result.json
test/mextram/: CMakeLists.txt  bjt504t.va.result.json
test/mextram_504.12.1/: CMakeLists.txt  bjt504.va.result.json  bjt504t.va.result.json  bjtd504.va.result.json  bjtd504t.va.result.json
test/ngspice/: CMakeLists.txt
test/ngspice/admst/: run_adms.sh
test/ngspice/ekv/: CMakeLists.txt
test/ngspice/mextram/: bjt504t.va.result.json  frontdef.inc
test/ngspice/pyadms/: test_report.py
test/psp102/: CMakeLists.txt  psp102_nqs.va
xmlversion/admsXml/: adms.c  adms.h  adms.implicit.xml.c  admsXml.c  admstpathYacc.y  create_files.sh
