cmake_minimum_required(VERSION 2.8)
PROJECT(ADMS)

IF (WIN32)
SET (FLEX_EXECUTABLE "C:/cygwin/bin/flex.exe")
SET (BISON_EXECUTABLE "C:/cygwin/bin/bison.exe")
SET (BISON_APIPREFIX "-p")
SET (BISON_APIPOSTFIX "")
ELSE (WIN32)
find_package(FLEX)
find_package(BISON)
MESSAGE("BISON_VERSION ${BISON_VERSION}")
IF (${BISON_VERSION} VERSION_LESS "2.6")
SET (BISON_APIPREFIX "-p")
SET (BISON_APIPOSTFIX "")
ELSE (${BISON_VERSION} VERSION_LESS "2.6")
SET (BISON_APIPREFIX "-Dapi.prefix={")
SET (BISON_APIPOSTFIX "}")
ENDIF (${BISON_VERSION} VERSION_LESS "2.6")
ENDIF (WIN32)

#SET(ADMST_DIR ${CMAKE_SOURCE_DIR}/ngspice/admst)
#SET(ADMST_SH  ${ADMST_DIR}/run_adms.sh)

#### Mac OS X specific
#IF (APPLE)
#SET(CMAKE_CXX_FLAGS ${CXX_COMPILER_FLAGS} "-std=c++11 -Wno-deprecated-register")
#ENDIF (APPLE)
#IF (CMAKE_COMPILER_IS_GNUCXX)
#SET(CMAKE_CXX_FLAGS ${CXX_COMPILER_FLAGS} "-std=c++0x")
#ENDIF (CMAKE_COMPILER_IS_GNUCXX)
SET(CMAKE_CXX_STANDARD 17)




ENABLE_TESTING()
ADD_SUBDIRECTORY(ngspice)
IF (NOT WIN32)
ADD_SUBDIRECTORY(archive/xmlversion/admsXml)
ENDIF (NOT WIN32)
ADD_SUBDIRECTORY(admsJSON)

