cmake_minimum_required(VERSION 2.8)
PROJECT(ADMS)

IF (WIN32)
SET (FLEX_EXECUTABLE "C:/cygwin/bin/flex.exe")
SET (BISON_EXECUTABLE "C:/cygwin/bin/bison.exe")
SET (BISON_APIPREFIX "-p")
SET (BISON_APIPOSTFIX "")
ELSE (WIN32)
find_package(FLEX)
find_package(BISON)
MESSAGE("BISON_VERSION ${BISON_VERSION}")
IF (${BISON_VERSION} VERSION_LESS "2.6")
SET (BISON_APIPREFIX "-p")
SET (BISON_APIPOSTFIX "")
ELSE (${BISON_VERSION} VERSION_LESS "2.6")
SET (BISON_APIPREFIX "-Dapi.prefix={")
SET (BISON_APIPOSTFIX "}")
ENDIF (${BISON_VERSION} VERSION_LESS "2.6")
ENDIF (WIN32)

SET(CMAKE_CXX_STANDARD 17)

ENABLE_TESTING()
ADD_SUBDIRECTORY(test)
#IF (NOT WIN32)
#ADD_SUBDIRECTORY(archive/xmlversion/admsXml)
#ENDIF (NOT WIN32)
ADD_SUBDIRECTORY(admsJSON)

