[bdist_wheel]
py-limited-api = cp37
[metadata]
version = 0.0.1
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
        Programming Language :: Python :: 3
        Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
name = pyadms
url = https://github.com/pyadms/pyadms
author = Juan Sanchez
author_email = info@devsim.com
description = pyadms: Verilog-A Compiler
license = Apache License, Version 2.0, LGPL 2.1
project_urls =
    Bug Tracker = https://github.com/pyadms/pyadms/issues
    Source Code = https://github.com/pyadms/pyadms
