[metadata]
version = 0.0.1
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python :: 3
        Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
name = pyadms
url = https://github.com/pyadms/pyadms
author = Juan Sanchez
author_email = info@devsim.com
description = pyadms: Verilog-A Compiler
license = GPL 2.0
project_urls =
    Bug Tracker = https://github.com/pyadms/pyadms/issues
    Source Code = https://github.com/pyadms/pyadms
